--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "@material/ripple/mdc-ripple";
 @import "@material/button/mdc-button";
 @import "@material/icon-button/mdc-icon-button";
+@import "@material/dialog/mdc-dialog";
 
 
 // html {
@@ -13,6 +14,42 @@
 //   width: 100%;
 //   height: auto;
 // }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  // border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  min-height: auto;
+
+  font-size: 13px;
+  background-color: rgb(33, 33, 33);
+  // word-break: break-word;
+  padding: 10px;
+  border-radius: 3px;
+  visibility: hidden;
+  width: 150px;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+  bottom: 110%;
+  left: 50%;
+  transform: translateX(-50%);
+
+  // margin-left: -60px;
+
+  /* 淡入 - 1秒内从 0% 到 100% 显示: */
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
 
 #databoard-containter {
 
@@ -39,11 +76,12 @@
       display: flex;
       flex-direction: row;
     }
+
     #board-toolbar-middlesection {
       flex: 1 0 auto;
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: center;
     }
 
 
@@ -57,27 +95,31 @@
 
     #board-toolbar-leftsection,
     #board-toolbar-middlesection,
-    #board-toolbar-rightsection  {
+    #board-toolbar-rightsection {
       div {
         margin: 0 5px;
         display: flex;
         flex-direction: row;
         justify-content: center;
+
         // overflow: hidden;
-        button{
+        button {
           @include mdc-icon-button-icon-size(18px, 18px);
           @include mdc-ripple-surface;
           @include mdc-ripple-radius-unbounded(36px);
           @include mdc-states-base-color($mdc-theme-primary);
-          @include mdc-states-opacities((hover: .1,press: .4));
-        };
+          @include mdc-states-opacities((hover: .1, press: .4));
+        }
+
+        ;
       }
     }
-    #board-toolbar-middlesection{
-      div{
+
+    #board-toolbar-middlesection {
+      div {
         button {
           // font-size: 16px;
-          @include mdc-states-opacities((hover: .1, focus: .3,press: .4));
+          @include mdc-states-opacities((hover: .1, focus: .3, press: .4));
         }
       }
     }
@@ -110,10 +152,11 @@
   transform: translateY(40px);
   overflow: hidden;
 }
+
 #scribble-subdock {
   position: absolute;
   bottom: 4px;
-  transform: translate(-50%,0);
+  transform: translate(-50%, 0);
   left: 50%;
   background-color: $mdc-theme-surface-dark;
   width: auto;
@@ -126,8 +169,10 @@
   border-radius: 8px;
   padding-left: 12px;
   padding-right: 12px;
-  margin-bottom: 8px;;
+  margin-bottom: 8px;
+  ;
 }
+
 // //pInst 创建的元素的 container 
 // #scribbleSketch-containter {
 //   position: absolute;
@@ -145,8 +190,18 @@
 
 
 
-  
+
 // }
+
+#dialogInsertasArrayorLinkedList {
+  z-index: 9999;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  @include mdc-dialog-container-fill-color($mdc-theme-surface);
+  // @include mdc-dialog-scrim-color($mdc-theme-error)
+}
 
 .tool-surface {
   @extend %sentinel;
